--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "convert-units": "^3.0.0-beta.5",
     "country-code-lookup": "^0.0.23",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -26,5 +27,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/convert-units": "^2.3.5"
   }
 }
